# Gaming_of_a_lifetime

./: .gitignore  CHANGELOG.MD  CLAUDE.md  Docker-compose.yml  Dockerfile  Dockerkile  README.md  app_gaming.py  new_features_ideas.md  pyproject.toml  requirements.txt
DB_creation_SQL_queries/: CREATE TABLE gamer_life.sql  INSERT_all_games.sql  README_SQL_DB_personal_gaming.md  UPDATE_NEW_games 2020.sql
Gaming_Pandas_test/: df_7K_all_consoles_updated-original.ipynb  df_7K_all_consoles_updatedV2.ipynb  gaming_metacritic_comparison-updated.ipynb  gaming_metacritic_comparisonV2.ipynb  gaming_pandas_original.ipynb  gaming_visualization-Copy1.ipynb  gaming_visualization.ipynb
Notebook_Pandas_&_Visualizations/: df_lifetime_gaming.csv  gaming_metacritic_comparison.ipynb
Notebook_Pandas_&_Visualizations/.ipynb_checkpoints/: gaming_pandasV2-checkpoint.ipynb
OLD/: INSERT_all_games.sql  INSERT_all_games_initial.sql  INSERT_all_games_v2.sql  INSERT_all_games_v3.sql  hltb_scraper_deprecated.py  hltb_scraper_functions_deprecated.py  metacritic_scraper_deprecated.py
OLD/old_datasets/: jvcom_750_vg.csv  metacritic_games.csv  metacritics_raw.csv
app/: Dockerfile  app_gaming.py  df_vg_local_csv.csv  hltb_scraper.py  home_page.py  page2_metacritic.py  pyproject.toml  requirements.txt
app/functions/: analytics.py  data_wrangling.py  db_connection.py  filters.py  hltb_scraper.py  mask_df_utils.py  (+8 more)
data/: init.sql
datasets/: df_vg_local_csv.csv  metacritic_6900_games_22_Dec_2016_updated.csv
db_data/: Dockerfile  init.sql  seed.sql  seed_hltb.sql  seed_metacritic_merged.sql
(+41 files in other folders)
