[tool.poetry]
name = "gaming-of-a-lifetime"
version = "0.1.0"
description = ""
authors = ["Binardino <langlois.robin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.24"
pandas = ">=2.0"
matplotlib = ">=3.7"
seaborn = ">=0.12"
plotly = ">=5.13"
pygal = ">=3.0"
squarify = ">=0.4"
pillow = ">=9.4"
tqdm = ">=4.65"
python-dotenv = ">=1.0"
sqlalchemy = ">=2.0"
psycopg2-binary = ">=2.9"
streamlit = ">=1.25"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
